corvus page created
in preparation for publishing corvus25

--- a/bagelTuesdays.html
+++ b/bagelTuesdays.html
@@ -18,10 +18,11 @@
         </div>
         <div class="nav">
           <ul>
+            <li><a href="corvus.html">CORVUS</a></li>
+            <li>/</li>
             <li><a href="schedule.html">EVENT SCHEDULE</a></li>
             <li>/</li>
             <li><a href="contact.html">CONTACT</a></li>
-
           </ul>
         </div><!--end nav-->
 
