--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Dalhousie, Philosophy, DUPS, Bagel Tuesday, Philosophy Society, University of King's College">
     <meta name="description" content="Website for Dalhousie Undergraduate Philosophy Society">
-    <meta name="author" content="William R. Delise">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <!-- BEGIN BODY -->
@@ -18,10 +17,11 @@
         </div>
         <div class="nav">
           <ul>
+            <li><a href="corvus.html">CORVUS</a></li>
+            <li>/</li>
             <li><a href="schedule.html">EVENT SCHEDULE</a></li>
             <li>/</li>
             <li><a href="contact.html">CONTACT</a></li>
-
           </ul>
         </div><!--end nav-->
 
@@ -36,13 +36,15 @@
         <ul> 
           <li> <b>Society Mail</b>: <a href="mailto:philsoc@dal.ca">philsoc@dal.ca</a></li>
 
-          <li> Will Delise, President: <a href="mailto:wl382558@dal.ca">wl382558@dal.ca</a></li>
-          <li> Sonnie Meltzer, Vice-President: <a href="mailto:al726092@dal.ca">al726092@dal.ca</a></li>
-          <li> Larissa Wilks, Treasurer: <a href="mailto:lr465672@dal.ca">lr465672@dal.ca</a></li>
+          <li> Sonnie Meltzer, Co-President: <a href="mailto:wl382558@dal.ca">al726092@dal.ca</a></li>
+          <li> Anika Panet-Carino, Co-President: <a href="mailto:al726092@dal.ca"></a>an341474@dal.ca</li>
+          <li> Ben Baxter, Treasurer: <a href="mailto:">...</a></li>
 
-          <li> Alan Iturriaga, Corvus Editor: <a href="mailto:ls671339@dal.ca">ls671339@dal.ca</a></li>
-          <li> Anika Panet-Carino, Event Coordinator: <a href="mailto:an341474@dal.ca">an341474@dal.ca</a></li>
-          <li> Amelia Bidini-Taylor, Social Media Manager: <a href="mailto:am664679@dal.ca">am664679@dal.ca</a></li>
+          <li> ..., Corvus Editor: <a href="mailto:">...</a></li>
+          <li> ..., Event Coordinator: <a href="mailto:">...</a></li>
+          <li> ..., Social Media Manager: <a href="mailto:">...</a></li>
+
+          <li> Andrew Fenton, Faculty Advisor: <a href="mailto:atf@dal.ca">atf@dal.ca</a></li>
 
         </ul>
       
