--- a/corvus.html
+++ b/corvus.html
@@ -18,10 +18,11 @@
         </div>
         <div class="nav">
           <ul>
+            <li><a href="corvus.html">CORVUS</a></li>
+            <li>/</li>
             <li><a href="schedule.html">EVENT SCHEDULE</a></li>
             <li>/</li>
             <li><a href="contact.html">CONTACT</a></li>
-
           </ul>
         </div><!--end nav-->
 
@@ -33,14 +34,34 @@
 
       <h2 class="subheader">About</h2>
         <p>
-          Corvus is an undergraduate philosophical journal published by Dalhousie University's undergaduate philosophy society. Corvus is subject to anonymous peer review by Dalhousie Graduate students in the department of philosophy.
+          Corvus is an undergraduate philosophy journal published by Dalhousie University's undergaduate philosophy society. Corvus is subject to anonymous peer review by Dalhousie Graduate students in the department of philosophy.
         </p>
       <h2 class="subheader">Information</h2>
-        <p>
-          The deadline for winter 2025 submissions was February 15. 
-        </p>
-        <p>
-          Corvus is currently in the peer review stage.
+        <p>Coming soon...</p>
+      <h2 class="subheader">Volume 25</h2>
+        <p>Find the issue <a href="corvus25.html"><em>here</em></a>.</p>
+        <p>Contributing Authors:
+          <ul>
+            <li>James Godsall, "In the Shadow of a Colossus: The Influence of Plato’s Timaeus on Lucan’s Cosmology"</li>
+            <li>Elisha Smith, "Individualist Fictional Realism"</li>
+            <li>Mark Mann, "A Difference in Manner, not Matter: A Theological Defense of Anne Conway’s Metaphysics"</li>
+            <li>Anna Michelin, "Claims Surrounding the Feminization of Higher Education: a Form of Misogyny"</li>
+            <li>Emmett Paul, "In the Pursuit of Ecstacy"</li>
+            <li>George Arnott, "Be No Man’s Lackey? Kantian Duties of Parenthood and Self in the Face of Coercive Labour"</li>
+            <li>Zoe Schacter Beiles, "The Existential Gene: Existential Ramifications of Genetic Intervention on the Child"</li>
+            <li>Amelia Bidini-Taylor, "The Individual Harms of an Attention Economy: An Analysis of Castro and Pham’s <em>Is the Attention Economy Noxious?"</em></li>
+          </ul>
+          Staff:
+          <ul>
+            <li>Co-Editor: Alan Iturriaga</li>
+            <li>Co-Editor, Typographer: William Delise</li>
+            <li>Treasurer: Larissa Wilks</li>
+            <li>Faculty Advisor: Andrew Fenton</li>
+            <li>Peer Reviewer: Clarisse Paron</li>
+            <li>Peer Reviewer: Julia Chiavegato</li>
+            <li>Peer Reviewer: Lara Millman</li>
+            <li>Peer Reviewer: Drew Badgley</li>
+          </ul>
         </p>
       <br/>
     <div class="bottom"><br /></div>    
