--- a/corvus25.html
+++ b/corvus25.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DUPS – Schedule</title>
-    <title>DUPS</title>
+    <title>DUPS – Contact</title>
     <link rel="icon" type="image/x-icon" href="Logo.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -13,29 +12,31 @@
   </head>
   <!-- BEGIN BODY -->
   <body>
-
     <div class="header">
         <div class="name">
           <h1><a href="index.html">Dalhousie Undergraduate Philosophy Society</a></h1>
         </div>
         <div class="nav">
           <ul>
-            <li><a href="corvus.html">CORVUS</a></li>
-            <li>/</li>
             <li><a href="schedule.html">EVENT SCHEDULE</a></li>
             <li>/</li>
             <li><a href="contact.html">CONTACT</a></li>
+
           </ul>
         </div><!--end nav-->
 
       <hr style="width:92%"/>
       
       </div><!--end header-->
-
-    <div class="content">
-      
-      <h2 class="subheader">Calendar</h2>
-      <iframe width="100%" height="650px" src="https://outlook.office365.com/owa/calendar/00a2498d5bb74c6ab141ee4266b7d276@dal.ca/37365f757bb7434fb17c4d41a7dd1eaa13845855095196273133/calendar.html"></iframe> 
+      <div class="content">
+        <object data="corvus25.pdf" type="application/pdf" width="100%" height="800px">
+            <p>
+                Unable to display PDF file. <a href="corvus25.pdf">Download</a> instead.
+            </p>
+        </object>
+        <a href="corvus25.pdf">Download</a>.
+      </div> 
+    <div class="bottom"><br /></div>    
   </body>
 </html>
 
