--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Dalhousie, Philosophy, DUPS, Bagel Tuesday, Philosophy Society, University of King's College">
     <meta name="description" content="Website for Dalhousie Undergraduate Philosophy Society">
-    <meta name="author" content="William R. Delise">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <!-- BEGIN BODY -->
@@ -18,6 +17,8 @@
         </div>
         <div class="nav">
           <ul>
+            <li><a href="corvus.html">CORVUS</a></li>
+            <li>/</li>
             <li><a href="schedule.html">EVENT SCHEDULE</a></li>
             <li>/</li>
             <li><a href="contact.html">CONTACT</a></li>
