updates to corvus and logo

--- a/corvus.html
+++ b/corvus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DUPS – Contact</title>
+    <title>DUPS – Corvus</title>
     <link rel="icon" type="image/x-icon" href="Logo.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -36,20 +36,24 @@
         <p>
           Corvus is an undergraduate philosophy journal published by Dalhousie University's undergaduate philosophy society. Corvus is subject to anonymous peer review by Dalhousie Graduate students in the department of philosophy.
         </p>
-      <h2 class="subheader">Information</h2>
+      <h2 class="subheader">Call for Papers</h2>
         <p>Coming soon...</p>
       <h2 class="subheader">Volume 25</h2>
         <p>Find the issue <a href="corvus25.html"><em>here</em></a>.</p>
-        <p>Contributing Authors:
+        <p>Contents:
           <ul>
-            <li>James Godsall, "In the Shadow of a Colossus: The Influence of Plato’s Timaeus on Lucan’s Cosmology"</li>
-            <li>Elisha Smith, "Individualist Fictional Realism"</li>
-            <li>Mark Mann, "A Difference in Manner, not Matter: A Theological Defense of Anne Conway’s Metaphysics"</li>
-            <li>Anna Michelin, "Claims Surrounding the Feminization of Higher Education: a Form of Misogyny"</li>
-            <li>Emmett Paul, "In the Pursuit of Ecstacy"</li>
-            <li>George Arnott, "Be No Man’s Lackey? Kantian Duties of Parenthood and Self in the Face of Coercive Labour"</li>
-            <li>Zoe Schacter Beiles, "The Existential Gene: Existential Ramifications of Genetic Intervention on the Child"</li>
-            <li>Amelia Bidini-Taylor, "The Individual Harms of an Attention Economy: An Analysis of Castro and Pham’s <em>Is the Attention Economy Noxious?"</em></li>
+            <li><a>Frontmatter</a></li>
+            <li>Andrew Fenton, <a>Foreword</a></li>
+            <li>Alan Iturriaga and William Delise, <a>Editorial</a></li>
+            <li>James Godsall, <a>"In the Shadow of a Colossus: The Influence of Plato’s Timaeus on Lucan’s Cosmology"</a></li>
+            <li>Elisha W. A. Smith, <a>"Individualist Fictional Realism"</a></li>
+            <li>Mark Mann, <a>"A Difference in Manner, not Matter: A Theological Defense of Anne Conway’s Metaphysics"</a></li>
+            <li>Anna Michelin, <a>"Claims Surrounding the Feminization of Higher Education: a Form of Misogyny"</a></li>
+            <li>Emmett Paul, <a>"In the Pursuit of Ecstacy"</a></li>
+            <li>George Arnott, <a>"Be No Man’s Lackey? Kantian Duties of Parenthood and Self in the Face of Coercive Labour"</a></li>
+            <li>Zoe Schacter Beiles, <a>"The Existential Gene: Existential Ramifications of Genetic Intervention on the Child"</a></li>
+            <li>Amelia Bidini-Taylor, <a>"The Individual Harms of an Attention Economy: An Analysis of Castro and Pham’s <em>Is the Attention Economy Noxious?"</em></a></li>
+            <li>Backmatter</li>
           </ul>
           Staff:
           <ul>
