--- a/corvus25.html
+++ b/corvus25.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DUPS – Contact</title>
+    <title>DUPS – Corvus 25</title>
     <link rel="icon" type="image/x-icon" href="Logo.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -18,24 +18,29 @@
         </div>
         <div class="nav">
           <ul>
+            <li><a href="corvus.html">CORVUS</a></li>
+            <li>/</li>
             <li><a href="schedule.html">EVENT SCHEDULE</a></li>
             <li>/</li>
             <li><a href="contact.html">CONTACT</a></li>
-
           </ul>
         </div><!--end nav-->
 
       <hr style="width:92%"/>
       
       </div><!--end header-->
-      <div class="content">
-        <object data="corvus25.pdf" type="application/pdf" width="100%" height="800px">
+      <div class="content" style="display: flex; justify-content: center;">
+        <object data="corvus25.pdf" type="application/pdf" width="80%" height="800px">
             <p>
                 Unable to display PDF file. <a href="corvus25.pdf">Download</a> instead.
             </p>
         </object>
-        <a href="corvus25.pdf">Download</a>.
-      </div> 
+        <br>
+      </div>
+      <div class="content" style="display: flex; justify-content: center;">
+        <a href="corvus25.pdf">Download this edition</a>.
+      </div>
+      
     <div class="bottom"><br /></div>    
   </body>
 </html>
