last edits for corvus publication

--- a/corvus.html
+++ b/corvus.html
@@ -36,24 +36,24 @@
         <p>
           Corvus is an undergraduate philosophy journal published by Dalhousie University's undergaduate philosophy society. Corvus is subject to anonymous peer review by Dalhousie Graduate students in the department of philosophy.
         </p>
-      <h2 class="subheader">Call for Papers</h2>
-        <p>Coming soon...</p>
+      <!--<h2 class="subheader">Call for Papers</h2>
+        <p>Coming soon...</p>-->
       <h2 class="subheader">Volume 25</h2>
-        <p>Find the issue <a href="corvus25.html"><em>here</em></a>.</p>
+        <p style="font-size: 24px">Read the complete issue <a href="corvus25.html">here</a>.</p>
         <p>Contents:
           <ul>
-            <li><a>Frontmatter</a></li>
-            <li>Andrew Fenton, <a>Foreword</a></li>
-            <li>Alan Iturriaga and William Delise, <a>Editorial</a></li>
-            <li>James Godsall, <a>"In the Shadow of a Colossus: The Influence of Plato’s Timaeus on Lucan’s Cosmology"</a></li>
-            <li>Elisha W. A. Smith, <a>"Individualist Fictional Realism"</a></li>
-            <li>Mark Mann, <a>"A Difference in Manner, not Matter: A Theological Defense of Anne Conway’s Metaphysics"</a></li>
-            <li>Anna Michelin, <a>"Claims Surrounding the Feminization of Higher Education: a Form of Misogyny"</a></li>
-            <li>Emmett Paul, <a>"In the Pursuit of Ecstacy"</a></li>
-            <li>George Arnott, <a>"Be No Man’s Lackey? Kantian Duties of Parenthood and Self in the Face of Coercive Labour"</a></li>
-            <li>Zoe Schacter Beiles, <a>"The Existential Gene: Existential Ramifications of Genetic Intervention on the Child"</a></li>
-            <li>Amelia Bidini-Taylor, <a>"The Individual Harms of an Attention Economy: An Analysis of Castro and Pham’s <em>Is the Attention Economy Noxious?"</em></a></li>
-            <li>Backmatter</li>
+            <li><a href="corvus25/Frontmatter.pdf">Frontmatter</a></li>
+            <li>Andrew Fenton, <a href="corvus25/Foreword.pdf">Foreword</a></li>
+            <li>Alan Iturriaga and William Delise, <a href="corvus25/Editorial.pdf">Editorial</a></li>
+            <li>James Godsall, <a href="corvus25/jgodsall.pdf">"In the Shadow of a Colossus: The Influence of Plato’s Timaeus on Lucan’s Cosmology"</a></li>
+            <li>Elisha W. A. Smith, <a href="corvus25/ewasmith.pdf">"Individualist Fictional Realism"</a></li>
+            <li>Mark Mann, <a href="corvus25/mmann.pdf">"A Difference in Manner, not Matter: A Theological Defense of Anne Conway’s Metaphysics"</a></li>
+            <li>Anna Michelin, <a href="corvus25/amichelin.pdf">"Claims Surrounding the Feminization of Higher Education: a Form of Misogyny"</a></li>
+            <li>Emmett Paul, <a href="corvus25/espaul.pdf">"In the Pursuit of Ecstacy"</a></li>
+            <li>George Arnott, <a href="corvus25/garnott.pdf">"Be No Man’s Lackey? Kantian Duties of Parenthood and Self in the Face of Coercive Labour"</a></li>
+            <li>Zoe Schacter Beiles, <a href="corvus25/zsbeiles.pdf">"The Existential Gene: Existential Ramifications of Genetic Intervention on the Child"</a></li>
+            <li>Amelia Bidini-Taylor, <a href="corvus25/abidinitaylor.pdf">"The Individual Harms of an Attention Economy: An Analysis of Castro and Pham’s <em>Is the Attention Economy Noxious?"</em></a></li>
+            <li><a href="corvus25/Backmatter.pdf">Backmatter</a></li>
           </ul>
           Staff:
           <ul>
