--- a/corvus25.html
+++ b/corvus25.html
@@ -30,9 +30,9 @@
       
       </div><!--end header-->
       <div class="content" style="display: flex; justify-content: center;">
-        <object data="corvus25.pdf" type="application/pdf" width="80%" height="800px">
+        <object data="corvus25/corvus25.pdf" type="application/pdf" width="80%" height="800px">
             <p>
-                Unable to display PDF file. <a href="corvus25.pdf">Download</a> instead.
+                Unable to display PDF file. <a href="corvus25/corvus25.pdf">Download</a> instead.
             </p>
         </object>
         <br>
